networkpolicies/allow-all-for-label.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-all-for-label
  namespace: default
spec:
  policyTypes:
    - Ingress
  podSelector:
    matchLabels:
      pod: b
  ingress:
  - {}
