networkpolicies/allow-all.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-all
  namespace: abcd
spec:
  policyTypes:
    - Ingress
  podSelector: {}
  ingress:
    - from: []
